force-app/main/default/objects/Review_Transaction_Setting__mdt.object
<CustomObject>
    <description>Configuration for the Review Transaction Object.</description>
    <fields>
        <fullName>Boolean_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Text_Value__c</fullName>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Review Transaction Setting</label>
    <pluralLabel>Review Transaction Settings</pluralLabel>
</CustomObject>